# wavry

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMMERCIAL.md  Cargo.toml  FIXING.md  GEMINI.md  HWTODO.md  PCVRTODO.md  QUARANTINE.md  README.md  TERMS.md  THIRD_PARTY.md  TODO.md  VERSION  audit.toml  security_best_practices_report.md  session-ses_3bbb.md
.codex/environments/: environment.toml
.github/workflows/: docker-base-image-updates.yml  docker-images.yml  platform-builds.yml  quality-gates.yml  quarantine.yml  release-dry-run.yml  release-train.yml  website.yml
apps/android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
apps/android/app/src/main/cpp/include/: wavry.h
apps/macos/: Package.swift
apps/web-reference/: README.md  app.js  index.html  package-lock.json  package.json
apps/web-reference/src/: app.css
apps/website/: README.md  docusaurus.config.ts  package.json  sidebars.ts
bins/wavry-client/: Cargo.toml
bins/wavry-client/src/: main.rs
bins/wavry-relay/: Cargo.toml
bins/wavry-server/: Cargo.toml
crates/rift-core/: Cargo.toml  build.rs
crates/rift-core/proto/: RIFT.proto
crates/rift-core/src/: cc.rs  lib.rs  relay.rs  stun.rs
crates/rift-core/tests/: fuzz_decode.rs
crates/rift-crypto/: Cargo.toml
crates/rift-crypto/src/: connection.rs  identity.rs  lib.rs  noise.rs  seq_window.rs  session.rs
crates/rift-crypto/tests/: integration.rs
crates/wavry-cli/: Cargo.toml
crates/wavry-cli/src/: main.rs
crates/wavry-client/: Cargo.toml
crates/wavry-client/src/: client.rs  helpers.rs  input.rs  lib.rs  main.rs  media.rs  signaling.rs  types.rs
crates/wavry-common/: Cargo.toml
crates/wavry-common/src/: error.rs  file_transfer.rs  helpers.rs  lib.rs  protocol.rs
crates/wavry-desktop/: package-lock.json  package.json
crates/wavry-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/wavry-desktop/src-tauri/src/: auth.rs  client_manager.rs  commands.rs  lib.rs  main.rs  media_utils.rs  secure_storage.rs  state.rs
crates/wavry-ffi/: Cargo.toml  build.rs
crates/wavry-ffi/include/: wavry.h
crates/wavry-ffi/src/: identity.rs  lib.rs  session.rs  signaling_ffi.rs
crates/wavry-gateway/: Cargo.toml  gateway.db
crates/wavry-gateway/migrations/: 20240101000000_initial_setup.sql  20240101000001_add_user_fields.sql  20260207000000_security_hardening.sql  20260207000001_relay_reputation.sql  20260211000000_admin_audit_log.sql
crates/wavry-gateway/src/: admin.rs  audit.rs  auth.rs  db.rs  lib.rs  main.rs  relay.rs  security.rs  signal.rs  web.rs
crates/wavry-gateway/tests/: admin_dashboard.rs
crates/wavry-master/: Cargo.toml
crates/wavry-master/src/: main.rs  selection.rs
crates/wavry-media/: Cargo.toml  build.rs
crates/wavry-media/benches/: capture_bench.rs
crates/wavry-media/src/: audio.rs  buffer_pool.rs  dummy.rs  encoder_pool.rs  lib.rs  linux.rs  mac_audio_capturer.rs  mac_audio_renderer.rs  mac_input_injector.rs  mac_screen_encoder.rs  mac_video_renderer.rs  recorder.rs  windows.rs
crates/wavry-media/src/android/: audio_renderer.rs  mod.rs  probe.rs  video_renderer.rs
crates/wavry-media/src/audio/: mod.rs  renderer.rs
crates/wavry-platform/: Cargo.toml
crates/wavry-platform/src/: clipboard.rs  dummy.rs  input_map.rs  lib.rs  windows_input_injector.rs
crates/wavry-platform/src/linux/: mod.rs
crates/wavry-relay/: Cargo.toml
crates/wavry-relay/src/: main.rs  session.rs
crates/wavry-server/: Cargo.toml
crates/wavry-server/src/: main.rs  webrtc_bridge.rs
crates/wavry-vr/: Cargo.toml
crates/wavry-vr-alvr/: Cargo.toml
crates/wavry-vr-alvr/src/: lib.rs  pcvr.rs  vendor.rs
crates/wavry-vr-openxr/: Cargo.toml
crates/wavry-vr-openxr/src/: android.rs  common.rs  lib.rs  linux.rs  windows.rs
crates/wavry-web/: Cargo.toml
crates/wavry-web/src/: config.rs  lib.rs  protocol.rs  webrtc.rs  webtransport.rs
design/: EXPORT_CHECKLIST.md  ICON_EXPORT_GUIDE.md  UI_MAPPING.md  icons.json  tokens.json
distribution/aur/: PKGBUILD
docker/: control-plane.compose.yml  gateway-entrypoint.sh  gateway.Dockerfile  relay-entrypoint.sh  relay.Dockerfile  server.Dockerfile
docs/: ADAPTIVE_STREAMING_ROADMAP.md  ADMIN_DASHBOARD.md  ANDROID_MODERN_UX_GUIDELINES.md  AUDIO_ROUTING_DESIGN.md  AV1_VALIDATION.md  BACKLOG_ROADMAP.md  CLIPBOARD_DESIGN.md  CODE_COVERAGE.md  CONTROL_PLANE_HARDENING_V0_0_4.md  CONTROL_PLANE_RUNBOOKS.md  DELTA_CC_SPEC.md  DISTRIBUTION_SIGNING.md  FILE_TRANSFER_DESIGN.md  GATEWAY_OPERATIONS.md  GPU_MEMORY_MANAGEMENT.md  HWTEST_RESULTS.md  INPUT_MAPPING_DESIGN.md  KEY_ROTATION.md  MEMORY_OPTIMIZATION.md  NETWORK_OPTIMIZATION.md  PLATFORM_SUPPORT.md  PLATFORM_UI_STRATEGY.md  PRICING_HOSTING.md  RECORDING_DESIGN.md  RELAY_OPERATIONS.md  RELEASE_ARTIFACTS.md  RELEASE_CHECKLIST.md  RELEASE_POLICY.md  RIFT_SPEC_V1.md  SECURE_PROVISIONING.md  WAVRY_ALVR_ADAPTER.md  WAVRY_ARCHITECTURE.md  WAVRY_CLIENT.md  WAVRY_HYBRID.md  WAVRY_MASTER.md  WAVRY_RELAY.md  WAVRY_RELAY_SELECTION.md  WAVRY_SECURITY.md  WAVRY_SERVER.md  WAVRY_TESTING.md  (+1 more)
scripts/: VERSION  av1-hardware-smoke.sh  build-all.sh  build-android-ffi.sh  build-cross.sh  build-macos.sh  check-workflow-action-pinning.sh  ci-wayland-runtime.sh  clean-artifacts.sh  control-plane-resilience.sh  dev-android.sh  dev-desktop.sh  dev-macos.sh  export_icons.py  export_icons.swift  export_icons_helper.sh  export_sf_symbols.swift  gateway-auth-smoke.sh  gen-android-keystore.sh  gen-windows-cert.sh  gen-wt-cert.sh  linux-display-smoke.sh  linux-package-test.sh  linux-performance-baseline.sh  master-relay-smoke.sh  memory-soak.sh  provision-infrastructure.sh  release-dry-run.sh  rollback.sh  run-android.sh  run-cargo-audit.sh  run-interactive.sh  set-version.sh  setup-admin-users.sh  vendor_alvr.sh  verify-release-checklist.sh  verify_icons.sh
scripts/lib/: control-plane-load-driver.py  port-utils.sh  tcp-chaos-proxy.py
scripts/website/: pull-website-release.sh
(+88 files in other folders)
