[workspace]
members = [
  "crates/rift-core",
  "crates/wavry-media",
  "crates/wavry-platform",
  "bins/wavry-server",
  "bins/wavry-client",
  "bins/wavry-relay",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
bitflags = { version = "2.6", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
mdns-sd = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
