[workspace]
members = [
  # Core protocol
  "crates/rift-core",
  "crates/rift-crypto",
  
  # Shared infrastructure
  "crates/wavry-common",
  
  # Platform abstraction
  "crates/wavry-media",
  "crates/wavry-platform",
  
  # Applications
  "crates/wavry-server",
  "crates/wavry-client",
  "crates/wavry-relay",
  "crates/wavry-master",
  "crates/wavry-cli",
  "crates/wavry-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Wavry Contributors"]
repository = "https://github.com/wavry/wavry"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "io-util"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Networking
mdns-sd = "0.10"

# Crypto
snow = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Utils
bitflags = { version = "2.6", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
