[workspace]
members = [
  # Core protocol
  "crates/rift-core",
  "crates/rift-crypto",
  
  # Shared infrastructure
  "crates/wavry-common",
  
  # Platform abstraction
  "crates/wavry-media",
  "crates/wavry-platform",
  
  # Applications
  "crates/wavry-server",
  "crates/wavry-client",
  "crates/wavry-relay",
  "crates/wavry-master",
  "crates/wavry-cli",
  "crates/wavry-desktop/src-tauri", "crates/wavry-ffi", "crates/wavry-gateway",
  "crates/wavry-vr",
  "crates/wavry-vr-alvr",
  "crates/wavry-vr-openxr",
  "crates/wavry-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
version = "0.0.5-unstable"
authors = ["Wavry Contributors"]
repository = "https://github.com/bybrooklyn/wavry"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"
bytes = "1.7"

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "io-util"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Windows (force unified versions)
windows = "0.62.2"
windows-core = "0.62.2"
windows-result = "0.4.1"

# Networking
mdns-sd = "0.10"
socket2 = "0.6"

# Crypto
snow = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Web
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Utils
arboard = "3.4"
bitflags = { version = "2.6", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
pasetors = "0.7"