[package]
name = "rift-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core RIFT protocol types, framing, and constants"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
bitflags.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rand = "0.8"
