[package]
name = "wavry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wavry CLI tools: key generation, diagnostics, debugging"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }

# Crypto
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true

# Internal
rift-core = { path = "../rift-core" }
rift-crypto = { path = "../rift-crypto" }
wavry-common = { path = "../wavry-common" }

[[bin]]
name = "wavry"
path = "src/main.rs"
