[package]
name = "wavry-client"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mdns-sd.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
wavry-common = { path = "../../crates/wavry-common" }
rift-core = { path = "../../crates/rift-core" }
rift-crypto = { path = "../../crates/rift-crypto" }
wavry-media = { path = "../../crates/wavry-media" }
rand.workspace = true
hex = "0.4.3"
tokio-tungstenite = "0.28.0"
serde.workspace = true
serde_json.workspace = true
url = "2.5.8"
futures = "0.3.31"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
