[package]
name = "wavry-client"
version = "0.0.2-canary"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mdns-sd.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
wavry-common = { path = "../../crates/wavry-common" }
rift-core = { path = "../../crates/rift-core" }
rift-crypto = { path = "../../crates/rift-crypto" }
wavry-media = { path = "../../crates/wavry-media" }
wavry-platform = { path = "../../crates/wavry-platform" }
wavry-vr = { path = "../../crates/wavry-vr" }
wavry-vr-alvr = { path = "../../crates/wavry-vr-alvr", features = ["alvr"] }
rand.workspace = true
hex = "0.4.3"
tokio-tungstenite = "0.28.0"
serde.workspace = true
serde_json.workspace = true
url = "2.5.8"
futures = "0.3.31"
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
gilrs = "0.11"
socket2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
