[package]
name = "wavry-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for Wavry: configuration, logging, error types"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
