[package]
name = "wavry-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
safer-ffi = "0.1"
# Log logging
log = "0.4"
env_logger = "0.10"

# Internal dependencies
wavry-common = { path = "../wavry-common" }
wavry-media = { version = "0.0.1", path = "../wavry-media" }
