[package]
name = "wavry-gateway"
version = "0.0.2-canary"
edition = "2021"

[features]
default = []
webtransport-runtime = ["dep:wavry-web", "wavry-web/webtransport-runtime"]

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
# Using sqlite for embedded simplicity, easy to backup
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth & Crypto
argon2 = "0.5"
totp-rs = { version = "5.5", features = ["qr"] }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Env
dotenv = "0.15"

# Utilities
anyhow = { workspace = true }
bytes = { workspace = true }
once_cell = "1.19"

# Shared protocol definitions (for Signaling)
wavry-common = { path = "../wavry-common" }
wavry-web = { path = "../wavry-web", optional = true }
rift-core = { path = "../rift-core" }
rift-crypto = { path = "../rift-crypto" }
base32 = "0.5.1"
futures = "0.3.31"
