[package]
name = "wavry-master"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wavry Master server: identity, relay registry, lease issuance, matchmaking"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true

# Crypto
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true

# Internal
rift-core = { path = "../rift-core" }
rift-crypto = { path = "../rift-crypto" }
wavry-common = { path = "../wavry-common" }
