[package]
name = "wavry-master"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wavry Master server: identity, relay registry, lease issuance, matchmaking"

[features]
default = []
insecure-dev-auth = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true

# Networking & Web
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
futures-util.workspace = true

# Database
# sqlx.workspace = true # Uncomment when DB is ready

# Crypto
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true

# Internal
rift-core = { path = "../rift-core" }
rift-crypto = { path = "../rift-crypto" }
wavry-common = { path = "../wavry-common" }
