[package]
name = "wavry-master"
version = "0.0.1-unstable"
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = []
insecure-dev-auth = []

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Internal
wavry-common = { path = "../wavry-common" }
pasetors = "0.7"
hex = "0.4"
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = "0.3"