[package]
name = "wavry-media"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
log = "0.4"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.11"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-audio = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.0"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"
