[package]
name = "wavry-media"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
log = "0.4"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.11"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-audio = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.0"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Graphics_Capture",
    "Storage_Streams",
    "Win32_Graphics_Direct3D",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Media_MediaFoundation",
]
