[package]
name = "wavry-media"
version = "0.0.1-canary"
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
opus-support = ["dep:opus"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
log = "0.4"
tracing = "0.1"
serde = { workspace = true, features = ["derive"] }
cpal = "0.15.3"
opus = { version = "0.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.8", features = ["media"] }
ndk-sys = "0.5"
ndk-context = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.11"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-audio = "0.22"
x11rb = { version = "0.13", features = ["randr"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.0"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-audio-types = "0.3.2"
objc2-core-media = { version = "0.3.2", features = ["objc2-core-audio-types"] }
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_MediaFoundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
