[package]
name = "wavry-platform"
version = "0.0.1-canary"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
wavry-media = { path = "../wavry-media" }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.11"
evdev = "0.12"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
tokio = { workspace = true, features = ["rt", "sync"] }
x11rb = { version = "0.13", features = ["xtest"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.0.1-canary"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
