[package]
name = "wavry-relay"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Wavry relay node - forwards encrypted UDP traffic between peers"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek.workspace = true
hex.workspace = true
pasetors = { workspace = true }

rift-core = { path = "../rift-core" }
rift-crypto = { path = "../rift-crypto" }
wavry-common = { path = "../wavry-common" }
