[package]
name = "wavry-server"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mdns-sd.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
rift-core = { path = "../../crates/rift-core" }
rift-crypto = { path = "../../crates/rift-crypto" }
wavry-common = { path = "../../crates/wavry-common" }
wavry-media = { path = "../../crates/wavry-media" }
wavry-platform = { path = "../../crates/wavry-platform" }
rand.workspace = true
hex = "0.4.3"
socket2 = { workspace = true }
