[package]
name = "wavry-vr-alvr"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# Enables building against the vendored ALVR source.
# Off by default to keep Wavry core deterministic and transport-only.
alvr = []

[dependencies]
wavry-vr = { path = "../wavry-vr" }
thiserror.workspace = true
glam = { version = "0.27", features = ["serde"] }
serde = { workspace = true }
openxr = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = "0.22"
gstreamer-app = "0.22"
glow = "0.13"
x11 = "2.21"
ash = "0.38"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
]
