[package]
name = "wavry-vr-alvr"
version = "0.0.3-rc1"
edition = "2021"
license = "AGPL-3.0-only"

[features]
# Enables building against the vendored ALVR source.
alvr = []

[dependencies]
wavry-vr = { path = "../wavry-vr" }
wavry-vr-openxr = { path = "../wavry-vr-openxr" }
thiserror.workspace = true
glam = { version = "0.27", features = ["serde"] }
serde = { workspace = true }
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = "0.22"
gstreamer-app = "0.22"
glow = "0.12"
x11 = { version = "2.21", features = ["xlib", "glx"] }
ash = "0.37"

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.8", features = ["media"] }
ndk-sys = "0.5"
ndk-context = "0.1"
ash = "0.37"

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
]