[package]
name = "wavry-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
webtransport-runtime = ["dep:tokio", "dep:tracing"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
