[package]
name = "wavry-desktop"
version = "0.0.1-unstable"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wavry_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wavry-client = { path = "../../wavry-client" }
wavry-media = { path = "../../wavry-media", features = ["opus-support"] }
rift-core = { path = "../../rift-core" }
rift-crypto = { path = "../../rift-crypto" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
hex = "0.4"
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
keyring = "2"
uuid = { version = "1", features = ["v4"] }
bytes.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wavry-platform = { path = "../../wavry-platform" }

[target.'cfg(target_os = "windows")'.dependencies]
wavry-platform = { path = "../../wavry-platform" }
